--- a/page.css
+++ b/page.css
@@ -18,6 +18,7 @@ body {
     justify-content: space-between; 
     align-items: center; 
     margin: 0; 
+    padding: 20px 120px 100px 120px; 
 }
 
 .links {
@@ -25,10 +26,42 @@ body {
     gap: 30px; 
     color: #E5E7EB; 
     font-size: 18px;
+    font-weight: 100; 
 }
 .logo {
     margin-right: auto;
     color: #F9FAF8; 
-    font-weight: 900;
+    font-weight: 800;
     font-size: 24px; 
+}
+.container {
+    display: flex; 
+    padding: 20px 120px 100px 120px; 
+    justify-content: space-between;
+}
+.hero {
+    max-width: 50%; 
+    gap: 16px; 
+}
+.awesome {
+    color: #F9FAF8; 
+    font-weight: 900;
+    font-size: 48px; 
+    margin-bottom: 10px; 
+}
+.awesomesub {
+    color: #E5E7EB; 
+    font-size: 18px;
+    margin-bottom: 10px; 
+}
+img {
+    width: 45%;  
+}
+.top {
+    font-size: 18px;
+    color: #F9FAF8; 
+    background-color: #3882F6;
+    padding:10px 30px 10px 30px; 
+    border-radius: 8px;
+    border: none; 
 }
