--- a/page.css
+++ b/page.css
@@ -65,3 +65,17 @@ img {
     border-radius: 8px;
     border: none; 
 }
+.midheader {
+    display: flex; 
+    justify-content: center;
+    font-size: 36px; 
+    font-weight: 900; 
+    padding: 40px; 
+}
+.infobox {
+    display: flex; 
+    justify-content: space-evenly;
+    padding: 20px; 
+    font-size: 18px;
+    color: #1F2937; 
+}
