--- a/page.css
+++ b/page.css
@@ -69,12 +69,27 @@ img {
     border: none; 
     font-weight:800;
 }
+.middle {
+    padding: 20px 80px 20px 80; 
+}
+.info img {
+    width: 200px; 
+    height: auto; 
+    margin: 0px; 
+    border: none;
+    border-radius: 8px;
+}
+
+.info div {
+    display: flex;
+    justify-content: center;
+}
 .midheader {
     display: flex; 
     justify-content: center;
     font-size: 36px; 
     font-weight: 900; 
-    padding: 40px; 
+    padding: 40px 40px 20px 40px; 
 }
 .infobox {
     display: flex; 
@@ -100,4 +115,30 @@ img {
     justify-content: flex-end;
     font-weight: 800;
     font-size: 24px; 
+}
+.lastcontainer {
+    padding: 80px; 
+}
+.bigblue {
+    background-color: #3882F6;
+    border-radius: 8px;
+    border: none; 
+    display: flex; 
+    padding: 40px;  
+    color: #F9FAF8; 
+    justify-content: center; 
+    justify-content: space-evenly; 
+    align-items: center; 
+}
+.action {
+    font-weight: 800; 
+    font-size: 24px;
+}
+.actionsub {
+    font-weight: 100;
+}
+.bottombutton {
+    border: solid 1px #F9FAF8; 
+    border-radius: 8px; 
+    padding:10px 30px 10px 30px; 
 }
