--- a/page.css
+++ b/page.css
@@ -102,6 +102,9 @@ img {
     background-color: #E5E7EB;
     color: #1F2937; 
     padding: 80px 200px 80px 200px; 
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
 }
 .quote {
     font-weight: lighter; 
@@ -141,4 +144,13 @@ img {
     border: solid 1px #F9FAF8; 
     border-radius: 8px; 
     padding:10px 30px 10px 30px; 
+}
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #E5E7EB;
+    font-size: 18px; 
+    padding: 20px; 
 }
