--- a/page.css
+++ b/page.css
@@ -69,6 +69,10 @@ img {
     border: none; 
     font-weight:800;
 }
+a {
+    text-decoration: none;
+    color: #F9FAF8; 
+}
 .middle {
     padding: 20px 80px 20px 80; 
 }
