--- a/page.css
+++ b/page.css
@@ -69,9 +69,10 @@ img {
     border: none; 
     font-weight:800;
 }
-a {
-    text-decoration: none;
+
+a:visited a:link a:hover { 
     color: #F9FAF8; 
+    text-align: none;
 }
 .middle {
     padding: 20px 80px 20px 80; 
