--- a/page.css
+++ b/page.css
@@ -69,10 +69,15 @@ img {
     border: none; 
     font-weight:800;
 }
-a a:visited {
+a {
     color: #F9FAF8; 
     text-decoration: none;
 }
+a :visited {
+    color: #F9FAF8; 
+    text-decoration: none;
+}
+
 .middle {
     padding: 20px 80px 20px 80; 
 }
